changed css to prevent text overlap

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -79,7 +79,7 @@ span {
   flex-direction: row;
   position: absolute;
   left: 50%;
-  top: 33%;
+  top: 40%;
   transform: translate(-50%, -50%);
   @media screen and (max-width: 420px) {
     top: 40%;
@@ -107,7 +107,7 @@ span {
   flex-direction: row;
   position: absolute;
   left: 50%;
-  top: 53%;
+  top: 62%;
   transform: translate(-50%, -50%);
   @media screen and (max-width: 420px) {
     top: 60%;
@@ -138,7 +138,7 @@ span {
   flex-direction: row;
   position: absolute;
   left: 50%;
-  top: 75%;
+  top: 85%;
   transform: translate(-50%, -50%);
   font-size: 1.5em;
   @media screen and (max-width: 420px) {
